# synthesizer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
dependancies/include/gtk/: pcre.h
dependancies/include/gtk/fontconfig/: fcfreetype.h
dependancies/include/gtk/freetype/: freetype.h
dependancies/include/gtk/gio/: xdp-dbus.h
dependancies/include/gtk/gtk/: gtkversion.h
dependancies/include/gtkmm/: atkmmconfig.h  cairo.h  cairommconfig.h  giommconfig.h  glibconfig.h  glibmmconfig.h
dependancies/include/gtkmm/atk/: atkversion.h
dependancies/include/gtkmm/atkmm/: action.h  component.h  document.h  editabletext.h  hyperlink.h  hypertext.h  image.h  implementor.h  noopobject.h  object.h  objectaccessible.h  range.h  relation.h  relationset.h  selection.h  stateset.h  streamablecontent.h  table.h  text.h  value.h
dependancies/include/gtkmm/fontconfig/: fontconfig.h
dependancies/include/gtkmm/gdk/: gdkversionmacros.h
dependancies/include/gtkmm/gdkmm/: applaunchcontext.h  color.h  cursor.h  device.h  devicemanager.h  display.h  displaymanager.h  dragcontext.h  drawingcontext.h  event.h  glcontext.h  monitor.h  pixbuf.h  pixbufanimation.h  pixbufanimationiter.h  pixbufformat.h  pixbufloader.h  rectangle.h  rgba.h  screen.h  seat.h  timecoord.h  types.h  visual.h  window.h
dependancies/include/gtkmm/gio/: gdbus-daemon-generated.h
dependancies/include/gtkmm/giomm/: action.h  actiongroup.h  actionmap.h  appinfo.h  applaunchcontext.h  application.h  applicationcommandline.h  asyncinitable.h  asyncresult.h  bufferedinputstream.h  bufferedoutputstream.h  cancellable.h  charsetconverter.h  converter.h  converterinputstream.h  converteroutputstream.h  credentials.h  datainputstream.h  dataoutputstream.h  dbusactiongroup.h  dbusaddress.h  dbusauthobserver.h  dbusconnection.h  dbuserror.h  dbuserrorutils.h  dbusinterface.h  dbusinterfaceskeleton.h  dbusinterfacevtable.h  dbusintrospection.h  dbusmenumodel.h  dbusmessage.h  dbusmethodinvocation.h  dbusobject.h  dbusownname.h  dbusproxy.h  dbusserver.h  dbussubtreevtable.h  dbusutils.h  dbuswatchname.h  desktopappinfo.h  (+91 more)
dependancies/include/gtkmm/glibmm/: balancedtree.h  binding.h  bytearray.h  bytes.h  checksum.h  convert.h  date.h  datetime.h  enums.h  fileutils.h  iochannel.h  keyfile.h  markup.h  miscutils.h  module.h  nodetree.h  optioncontext.h  optionentry.h  optiongroup.h  regex.h  shell.h  spawn.h  thread.h  threads.h  timezone.h  unicode.h  uriutils.h  valuearray.h  variant.h  variantdict.h  variantiter.h  varianttype.h
dependancies/include/gtkmm/gtkmm/: aboutdialog.h  action.h  (+231 more)
dependancies/tools/: glib-mkenums
dependancies/tools/codegen/: config.py
dependancies/x32/gtk/: expat.lib  fontconfig.lib  gio-2.0.lib  gmodule-2.0.lib  gthread-2.0.lib  libcharset.lib  libpng16.lib  pangoft2-1.0.lib  pcre.lib  pcre16.lib
dependancies/x32/gtkmm/: cairo-gobject.lib  gailutil-3.0.lib  gdk-3.0.lib  glib-2.0.lib  glibmm.lib  gobject-2.0.lib  libffi.lib  libiconv.lib  pangocairo-1.0.lib  pcre32.lib  sigc-2.0.lib
dependancies/x32/portaudio/: portaudio.lib
dependancies/x64/gtk/: bz2.lib  cairo-gobject.lib  cairo.lib  freetype.lib  gdk-3.0.lib  gdk_pixbuf-2.0.lib  glib-2.0.lib  gthread-2.0.lib  libcharset.lib  libpng16.lib  pango-1.0.lib  pangoft2-1.0.lib  pcrecpp.lib  pcreposix.lib  pixman-1.lib
dependancies/x64/gtkmm/: cairomm-1.0.lib  gailutil-3.0.lib  glibmm.lib  gmodule-2.0.lib  gobject-2.0.lib  libffi.lib  libiconv.lib  libintl.lib  pangowin32-1.0.lib  pcre16.lib
dependancies/x64/portaudio/: portaudio.lib
doc/: building.md
resources/: CMakeLists.txt
resources/compiled/: asset_database.json  synthesizer.gresource.xml
resources/compiled/ui/: #app_menu.ui#  window.ui
resources/config/: config.json
resources/packaged/config/: userDirPointer.json
resources/ui/: #window.ui#  prefs.ui  prefs.ui~  window.ui~
source/: CMakeLists.txt
source/EtCore/: CMakeLists.txt  stdafx.h
source/EtCore/Content/: Asset.cpp  Asset.h  ContentLoader.h  ContentLoader.inl  ContentManager.cpp  ContentManager.h  ContentManager.inl
source/EtCore/FileSystem/: Entry.cpp  FileUtil.cpp  FileUtil.h  JSONdom.h
source/EtCore/Helper/: Commands.cpp  InputManager.cpp  InputManager.h  Logger.h  PerformanceInfo.h
source/EtCore/Reflection/: Serialization.h  Serialization.inl  serialization.cpp
source/EtMath/: CMakeLists.txt  MathInc.h  Quaternion.h  Quaternion.inl  Transform.h  Transform.inl
source/EtRendering/: CMakeLists.txt  RenderState.cpp  RenderState.h  Shader.h  ShaderData.cpp  ShaderData.h  ShaderData.inl  Uniform.h  Viewport.cpp  Viewport.h  stdafx.h
source/Synthesizer/: AdsrEnvelope.cpp  AdsrEnvelope.h  CMakeLists.txt  Config.cpp  Config.h  Filter.cpp  Filter.h  Framework.cpp  Framework.h  Framework.inl  LowEndAudioManager.cpp  LowEndAudioManager.h  LowEndAudioManager.inl  MidiListener.h  MidiManager.cpp  MidiManager.h  Oscillator.cpp  Oscillator.h  Pattern.cpp  Pattern.h  SynthApp.cpp  SynthApp.h  Synthesizer.cpp  Synthesizer.h  linkerHelper.h  main.cpp  stdafx.h
source/Synthesizer/Config/: config.json  settings.ini
source/Synthesizer/Config/UI/: synthesizer.gresource.xml  window.ui
source/Synthesizer/FileSystem/: BinaryReader.cpp  Entry.cpp  JSONdom.h  JsonWriter.cpp  JsonWriter.h
source/Synthesizer/Helper/: InputManager.h  Logger.cpp  Logger.h  PerformanceInfo.cpp  PerformanceInfo.h
source/Synthesizer/Math/: Math.h  MathUtil.h  Matrix.h  Quaternion.h  Transform.h  Vector.h
source/Synthesizer/Reflection/: Serialization.h  Serialization.inl  serialization.cpp
source/Synthesizer/Resources/share/applications/: Synthesizer.desktop
source/Synthesizer/Resources/share/gtk-3.0/: settings.ini
source/Synthesizer/Synth/: AdsrEnvelope.cpp  AdsrEnvelope.h  Filter.cpp  Filter.h  Oscillator.cpp  Oscillator.h  Pattern.cpp  Pattern.h  Pattern.inl  Synthesizer.cpp  Synthesizer.h
source/Synthesizer/UI/: FrameworkWindow.cpp  FrameworkWindow.h  OscillatorRenderer.cpp  OscillatorRenderer.h  Renderer.h  SettingsDialog.cpp  SettingsDialog.h  SynthAppWindow.cpp  SynthAppWindow.h  Viewport.cpp  Viewport.h
(+568 files in other folders)
