cmake_minimum_required (VERSION 3.10.0)

# custom build / configuration types

set(CMAKE_CONFIGURATION_TYPES "Debug;Develop;Shipping" CACHE STRING "Available build-types: Debug, Develop and Shipping" FORCE)
set(CMAKE_CXX_FLAGS_DEVELOP "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
set(CMAKE_C_FLAGS_DEVELOP "${CMAKE_C_FLAGS_RELWITHDEBINFO}")
set(CMAKE_CXX_FLAGS_SHIPPING "${CMAKE_CXX_FLAGS_RELEASE}")
set(CMAKE_C_FLAGS_SHIPPING "${CMAKE_C_FLAGS_RELEASE}")

# solution
project (Synthesizer C CXX)

set_property (GLOBAL PROPERTY USE_FOLDERS ON)

set(ProjectRoot "${CMAKE_BINARY_DIR}/")
set(SourceDir "${ProjectRoot}source/")

# Put built objects all in the same folder so they can be run easily
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_BINARY_DIR}/../bin/Debug)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEVELOP ${PROJECT_BINARY_DIR}/../bin/Develop)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_SHIPPING ${PROJECT_BINARY_DIR}/../bin/Shipping)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${PROJECT_BINARY_DIR}/../lib/Debug)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEVELOP ${PROJECT_BINARY_DIR}/../lib/Develop)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_SHIPPING ${PROJECT_BINARY_DIR}/../lib/Shipping)
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${PROJECT_BINARY_DIR}/../lib/Debug)
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEVELOP ${PROJECT_BINARY_DIR}/../lib/Develop)
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_SHIPPING ${PROJECT_BINARY_DIR}/../lib/Shipping)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory (source)